# ZoomRecovery

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SCRIPT_ERROR_ANALYSIS.md  TESTING_GUIDE.md  VERSION_COMPATIBILITY_ANALYSIS.md  build.sh  gitignore  install.sh  prune-branches.sh  release.sh  zoomrecovery  zoomrecovery-1.0.25.pkg  zoomrecovery-dev  zoomrecovery.bak.1
.claude/: settings.json
.claude/commands/: check-secrets.md
.github/: pyproject.toml
.github/src/zoomrecovery/: __init__.py  __main__.py
.github/workflows/: publish.yml  trigger-tap-update.yml
Claude/.beads/: issues.jsonl  metadata.json
Claude/.claude/: settings.json
Formula/: zoomrecovery-dev.rb
src/zoomrecovery/: __init__.py
src/zoomrecovery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
