[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoomrecovery"
dynamic = ["version"]
description = "Fix Zoom error 1132 by clearing corrupted database files and rotating MAC addresses"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["zoom", "error-1132", "mac-spoofing", "macos", "networking"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Environment :: Console",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/twinboi90/ZoomRecovery"
"Bug Tracker" = "https://github.com/twinboi90/ZoomRecovery/issues"

[project.scripts]
zoomrecovery = "zoomrecovery.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "zoomrecovery.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zoomrecovery = ["_script.sh"]
